tests/ui/macros/macro-span-issue-116502.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/macro-span-issue-116502.rs:7:13
   |
LL |             _
   |             ^ not allowed in type signatures
...
LL |     struct S<T = m!()>(m!(), T)
   |                  ---- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/macro-span-issue-116502.rs:7:13
   |
LL |             _
   |             ^ not allowed in type signatures
...
LL |         T: Trait<m!()>;
   |                  ---- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/macro-span-issue-116502.rs:7:13
   |
LL |             _
   |             ^ not allowed in type signatures
...
LL |     struct S<T = m!()>(m!(), T)
   |                        ---- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0121`.
